Update contact information with new email and website URL

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -12,8 +12,8 @@ const currentYear = new Date().getFullYear();
         </p>
         <div class="space-y-2 text-gray-400">
           <p>경기도 화성시 동탄대로4길 95, 대한민국</p>
-          <p>이메일: contact@solena.co.kr</p>
-          <p>홈페이지: solena.co.kr</p>
+          <p>이메일: worldmyview24@gmail.com</p>
+          <p>홈페이지: artdesigner.co.kr</p>
         </div>
       </div>
       <div>
